<resources>
    <string name="app_name">Safe Pune</string>
    <string name="title_activity_hotspot_map">Map</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_drawer">Emergency Services</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_view_group_details">ViewGroupDetailsActivity</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="viral_message_submission_instructions">Instructions:\n\nMake sure your message is not already submitted. Check the submitted viral messages.\n\nPaste the exact message text or provide a description of the attached file.</string>

    <string name="sign_in_instructions">Sign in with your registered email address.</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="sign_in_button">Sign In</string>
    <string name="google_sign_in_instructions">Create a account or sign in directly with your google account.</string>
    <string name="google_sign_in_button">Google Sign In</string>
    <string name="pothole_upload">Upload Potholes Picture</string>
    <string name="pothole_choose_button">Choose</string>
    <string name="pothole_upload_button">Upload</string>
    <string name="category">Category of the message</string>
    <string name="message_description">Message text or description</string>
    <string name="attachment_instructions">Attach applicable file</string>
    <string name="file_selected">1 file selected</string>
    <string name="submit_message_button">Submit Message</string>
    <string name="accidents_emergency">Accidents</string>
    <string name="potholes_emergency">Potholes</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="crimes_emergency">Crimes</string>
    <string name="report_problems">Report problems</string>
    <string name="navigation_emergency">Navigation</string>
    <string name="fake_message_title">FAKE MESSAGE</string>
    <string name="date_16_09_2018">Date : 16-09-2018</string>
    <string name="attached_file_title">Attached file:</string>
    <string name="date">Date :</string>
    <string name="category_head">Category:</string>
    <string name="status">Status:</string>
    <string name="message_text">Message Text:</string>
    <string name="description">Description</string>
    <string name="view_viral">View submitted and verified viral messages.</string>
    <string name="report_viral">Report a suspicious message for verification.</string>
    <string name="police">Police</string>
    <string name="fire_station">Fire Station</string>
    <string name="hospital">Hospital</string>
    <string name="doctor">Doctor</string>
    <string name="monkey_catchers">Monkey Catchers</string>
    <string name="blood_bank">Blood Bank</string>
    <string name="help_groups">Help groups</string>
    <string name="safety_violations">Safety Violations</string>
    <string name="ambulance">Ambulance</string>
    <string name="suspicious_activity">Suspicious Activity</string>
    <string name="wildlife_support">Wildlife Support</string>
    <string name="senior_protection">Senior Protection</string>
    <string name="user_name_head">User Name</string>
    <string name="example_domain_com">example@domain.com</string>
    <string name="road_safety_drawer">Road Safety</string>
    <string name="community_drawer">Community</string>
    <string name="viral_messages_drawer">Viral Messages</string>
    <string name="notifications_drawer">Notifications</string>
    <string name="polls_drawer">Polls</string>
    <string name="user_details_drawer">User Details</string>
    <string name="profile_drawer">Profile</string>
    <string name="submissions_drawer">Submissions</string>
    <string name="preferences_drawer">Preferences</string>
    <string name="emergency_services_header">Emergency Services</string>
    <string name="emergency_contacts_header">Emergency Contacts</string>
    <string name="viral_message_header">Viral Message</string>
    <string name="viral_message">Viral Messages</string>
    <string name="title_activity_service_location_maps">Map</string>
    <string name="report_road_problem_instructions">Instructions:  Provide a description of the problem encountered.</string>
</resources>
