<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="com.smartcitypune.smartpune.ViewViralMessageActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date" />

        <TextView
            android:id="@+id/categoryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/category_head" />

        <TextView
            android:id="@+id/statusTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/status" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/message_text" />

        <TextView
            android:id="@+id/messageDescriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/description" />

        <TextView
            android:id="@+id/attachedFileTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/attached_file_title" />

        <FrameLayout
            android:id="@+id/viralMessageFrameLayout"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="5dp">


            <ImageView
                android:id="@+id/viralMessageImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white" />

            <ImageView
                android:id="@+id/fake_overlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/fake_overlay"
                android:visibility="invisible" />

            <ProgressBar
                android:id="@+id/loadingProgressBar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal|center_vertical" />
        </FrameLayout>


    </LinearLayout>
</LinearLayout>
