<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/google_sign_in_layout"
    android:background="#22BDBDBD"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smartcitypune.smartpune.GoogleSignInActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:padding="35dp">

                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="80dp"
                    android:src="@drawable/app_logo" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_instructions"
                    android:textColor="@android:color/background_dark" />

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/email_label"
                    android:textAllCaps="true" />

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_shape_for_edittext"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@android:color/background_dark" />

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/password_label"
                    android:textAllCaps="true" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_shape_for_edittext"
                    android:inputType="textPassword"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@android:color/background_dark" />

                <Button
                    android:id="@+id/email_sign_in_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/round_shape_for_button_primary"
                    android:text="@string/sign_in_button"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white" />

                <View
                    android:id="@+id/view"
                    android:layout_width="200dp"
                    android:layout_height="2dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/google_sign_in_instructions"
                    android:textColor="@android:color/background_dark"
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/google_sign_in_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_shape_for_button_red"
                    android:text="@string/google_sign_in_button"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white" />


            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
